tests/NormalTests/paczka1/fuzzy1/53367057.err
Error in line 18: Wfc6RbgM S325 70,9
Error in line 22: 0M0nSbvUT A455 57,7
Error in line 26: 0M0nSbvUT A799 98,4
